--- a/code/pyproject.toml
+++ b/code/pyproject.toml
@@ -15,6 +15,7 @@ netCDF4 = "^1.5.8"
 pytest = "^3.4"
 black = "^21.9b0"
 pooch = "^1.5.2"
+flake8 = "^4.0.1"
 
 [tool.poetry.scripts]
 imktk = "imktk:main"
