--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -1,11 +1,7 @@
 name: Build and Push Docker Image
-on:
-  push:
-    tags:
-      - 'v**'
-      - '!v**-alpha'
+on: workflow_dispatch
 jobs:
-    Build-and-Push-Docker-Image:
+    build-and-push-docker-image:
         runs-on: ubuntu-latest
         steps:
             - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
