--- a/.github/workflows/static-testing.yml
+++ b/.github/workflows/static-testing.yml
@@ -17,6 +17,10 @@ jobs:
           uses: snok/install-poetry@v1
           with:
             version: 1.1.12
+        - name: Install package
+          shell: bash
+          working-directory: ./code
+          run: poetry install
         - name: Run Black8 formatting
           shell: bash
           working-directory: ./code
