--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -30,11 +30,12 @@ jobs:
             - name: Create Release
               uses: ncipollo/release-action@v1
               with:
-                artifacts: "dist/*"
+                artifacts: "code/dist/*"
                 token: ${{ secrets.GITHUB_TOKEN }}
                 draft: false
                 prerelease: steps.check-version.outputs.prerelease == 'true'
             - name: Publish to PyPI
+              working-directory: ./code
               env:
                 POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
               run: poetry publish
