--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -37,5 +37,5 @@ jobs:
             - name: Publish to PyPI
               working-directory: ./code
               env:
-                POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI_TOKEN }}
+                POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI }}
               run: poetry publish
