--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -21,20 +21,27 @@ jobs:
             - name: Build project for distribution
               working-directory: ./code
               run: poetry build
+            - name: Extract module version from poetry
+              shell: bash
+              working-directory: ./code
+              run: echo "##[set-output name=version;]$(poetry version --short)"
+              id: module_poetry
+            - name: Extract module version from tag
+              shell: bash
+              run: echo "##[set-output name=version;]$(echo ${GITHUB_REF#refs/tags/})"
+              id: module_tag
+            - name: Check matchin names
+              env:
+                  POETRY_VERSION: ${{ steps.module_poetry.outputs.version }}
+                  TAG_VERSION: ${{ steps.module_tag.outputs.version }}
+              run: |
+                [[ $POETRY_VERSION == $TAG_VERSION ]]
             - name: Check Version
               id: check-version
               working-directory: ./code
               run: |
                 [[ "$(poetry version --short)" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] \
                   || echo ::set-output name=prerelease::true
-            - name: Check poetry version
-              working-directory: ./code
-              run: echo "Package $(poetry version --short)"
-            - name: Check tag version
-              run: echo "    Tag ${GITHUB_REF#refs/tags/}"
-            - name: Check if tag and poetry version match
-              run: |
-                [[ "$(poetry version --short)" == "${GITHUB_REF#refs/tags/}" ]]
             - name: Create Release
               uses: ncipollo/release-action@v1
               with:
