--- a/code/pyproject.toml
+++ b/code/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "imktk"
-version = "0.1.6-alpha.0"
+version = "0.1.6-alpha.2"
 description = "Toolkit provided by IMK at KIT"
 license = "MIT"
 authors = [
     "Uğur Çayoğlu <Ugur.Cayoglu@kit.edu>",
 ]
-readme = "../README.md"
+readme = "README.md"
 homepage = "https://github.com/imk-toolkit/imk-toolkit"
 repository = "https://github.com/imk-toolkit/imk-toolkit"
 documentation = "https://github.com/imk-toolkit/imk-toolkit"
