--- a/code/pyproject.toml
+++ b/code/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "imktk"
-version = "0.1.6-alpha.3"
+version = "0.1.6"
 description = "Toolkit provided by IMK at KIT"
 license = "MIT"
 authors = [
