--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -32,17 +32,17 @@ jobs:
           installer-parallel: true
       - name: Install package
         shell: bash
-        working-directory: ./code
+        working-directory: ./imktk
         run: poetry install --no-interaction --no-ansi -vv
       - name: Import module
         shell: bash
-        working-directory: ./code
+        working-directory: ./imktk
         run: |
           source .venv/bin/activate
           python -c "import imktk"
       - name: Run cli tool
         shell: bash
-        working-directory: ./code
+        working-directory: ./imktk
         run: |
           source .venv/bin/activate
           imktk
