--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -23,11 +23,12 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Run image
-        uses: abatilo/actions-poetry@v2.0.0
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
         with:
-          poetry-version: ${{ matrix.poetry-version }}
+          version: ${{ matrix.poetry-version }}
       - name: Install package
+        shell: bash
         working-directory: ./code
         run: poetry install --no-interaction --no-ansi -vv
       - name: Import module
