--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.7, 3.8]
+        python-version: [3.7, 3.8, 3.9, 3]
         poetry-version: [1.1.12]
         os: [ubuntu-18.04]  #, macos-latest, windows-latest
     runs-on: ${{ matrix.os }}
@@ -18,7 +18,7 @@ jobs:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
       - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - run: echo "💾 ${{ matrix.os }} | 🐍 ${{ matrix.python-version }} | 👨‍🎨 ${{ matrix.poetry-version }}"
+      - run: echo "💾 ${{ matrix.os }} | 🐍 ${{ matrix.python-version }} | 📖 ${{ matrix.poetry-version }}"
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
