--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -19,11 +19,11 @@ jobs:
               with:
                 version: 1.1.12
             - name: Build project for distribution
-              working-directory: ./code
+              working-directory: ./imktk
               run: poetry build --no-interaction --no-ansi -vv
             - name: Extract module version from poetry
               shell: bash
-              working-directory: ./code
+              working-directory: ./imktk
               run: echo "##[set-output name=version;]$(poetry version --short)"
               id: module_poetry
             - name: Extract module version from tag
@@ -38,19 +38,19 @@ jobs:
                 [[ v$POETRY_VERSION == $TAG_VERSION ]]
             - name: Check kind of version
               id: check-version
-              working-directory: ./code
+              working-directory: ./imktk
               run: |
                 [[ "$(poetry version --short)" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] \
                   || echo ::set-output name=prerelease::true
             - name: Create release
               uses: ncipollo/release-action@v1
               with:
-                artifacts: "./code/dist/*"
+                artifacts: "./imktk/dist/*"
                 token: ${{ secrets.GITHUB_TOKEN }}
                 draft: false
                 prerelease: steps.check-version.outputs.prerelease == 'true'
             - name: Publish to PyPI
-              working-directory: ./code
+              working-directory: ./imktk
               env:
                 POETRY_PYPI_TOKEN_PYPI: ${{ secrets.PYPI }}
               run: poetry publish --no-interaction --no-ansi -vv
