--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,9 @@
 version: "3.8"
 
 services:
-  code:
+  imktk:
     build:
-      context: ./code
+      context: ./imktk
       dockerfile: Dockerfile
     env_file:
       - ./env/.env
