--- a/imktk/pyproject.toml
+++ b/imktk/pyproject.toml
@@ -22,12 +22,10 @@ classifiers = [
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.7, <3.10"
 xarray = "^0.20.1"
 netCDF4 = "^1.5.8"
 
