Proper logging setup with command line setting. Fixes #70
Change default logging and add it to environment file

--- a/env.example
+++ b/env.example
@@ -1,2 +1,3 @@
-XSUITE_DA_METHODS="/home/python/imktk/imktk/dataarray_methods"
-XSUITE_DS_METHODS="/home/python/imktk/imktk/dataset_methods"
+IMKTK_DATAARRAY="/home/python/imktk/imktk/dataarray_methods"
+IMKTK_DATASET="/home/python/imktk/imktk/dataset_methods"
+IMKTK_LOGLEVEL="ERROR"
