--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         python-version: [3.7, 3.8, 3.9]
         poetry-version: [1.1.12]
-        os: [ubuntu-18.04]  #, macos-latest, windows-latest
+        os: [ubuntu-18.04, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
@@ -31,6 +31,7 @@ jobs:
           virtualenvs-in-project: true
           installer-parallel: true
       - name: Poetry Environment Information
+        shell: bash
         run: |
           poetry env info
           poetry env list
@@ -38,11 +39,21 @@ jobs:
         run: poetry install --no-interaction --no-ansi -vv
       - name: Import module
         working-directory: ./imktk
+        shell: bash
         run: |
-          source $(poetry env info --path)/bin/activate
+          if [ "$RUNNER_OS" == "Windows" ]; then
+              source $(poetry env info --path)\\Scripts\\activate;
+          else
+              source $(poetry env info --path)/bin/activate;
+          fi
           python -c "import imktk"
       - name: Run cli tool
         working-directory: ./imktk
+        shell: bash
         run: |
-          source $(poetry env info --path)/bin/activate
+          if [ "$RUNNER_OS" == "Windows" ]; then
+              source $(poetry env info --path)\\Scripts\\activate;
+          else
+              source $(poetry env info --path)/bin/activate;
+          fi
           imktk
