--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "imktk"
-version = "0.1.9-rc.2"
+version = "0.1.9"
 description = "Toolkit provided by IMK at KIT"
 license = "MIT"
 authors = [
