--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "imktk"
-version = "0.2.3"
+version = "0.2.4"
 description = "Toolkit provided by IMK at KIT"
 license = "MIT"
 authors = [
@@ -34,6 +34,7 @@ scipy = "^1.9.0"
 pytest = "^3.4"
 black = "^22.6.0"
 flake8 = "^4.0.1"
+requests = "^2.31.0"
 
 [tool.poetry.scripts]
 imktk = "imktk:main"
